<resources>
    <string name="app_name">Rick And Morty</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="check_out_the_characters">Check out the characters</string>
    <string name="welcome_to_the_rick_and_morty_app">Welcome to the Rick and Morty App!</string>
    <string name="episodes">Episodes</string>
    <string name="check_out_the_episodes">Check out the episodes</string>
    <string name="characters">Characters</string>
    <string name="title_activity_credits">Credits</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="home">Home</string>
    <string name="credits">Credits</string>
    <string name="check_out_the_locations">Check out the locations</string>
    <string name="locations">locations</string>
    <string name="dimension">Dimension:</string>
    <string name="dimension_dubbelpunt">Dimension:</string>
    <string name="locations2">Locations</string>
</resources>