<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".screens.main.HomepageFragment"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#101f27">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="97dp"
            android:layout_height="257dp"
            android:layout_marginStart="280dp"
            android:layout_marginBottom="516dp"
            android:contentDescription="rick-morty-welcome"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/welcomerickmorty" />

        <TextView
            android:id="@+id/textView2"
            style="@style/whiteText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingLeft="0sp"
            android:text="@string/welcome_to_the_rick_and_morty_app"
            android:textAlignment="center"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.024" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/locations_button"
                    style="@style/whiteText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:backgroundTint="#a9c57f"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:text="@string/locations"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/episodes_button"
                    style="@style/whiteText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:backgroundTint="#3E468D"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:text="@string/episodes"
                    android:textSize="20sp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <TextView
                android:id="@+id/textView"
                style="@style/subtitleText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/check_out_the_characters" />

            <Button
                android:id="@+id/characters_button"
                style="@style/whiteText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:backgroundTint="#3E738E"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:text="@string/characters"
                android:textSize="20sp" />

        </LinearLayout>

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="324dp"
            android:layout_height="459dp"
            android:layout_marginBottom="-50sp"
            android:alpha="0.8"
            android:contentDescription="rick and morty"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/randm" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>